--- a/about.html
+++ b/about.html
@@ -43,6 +43,9 @@
     </div>
   </header>
 
+  <!-- WRAPPER FOR STICKY FOOTER -->
+  <div class="footer-wrapper">
+  
   <!-- About Section -->
   <section id="about" class="about-section">
     <div class="container">
@@ -82,6 +85,7 @@
       </div>
     </div>
   </section>
+  </div>
 
   <!-- Footer Section -->
   <footer class="site-footer-short">
