--- a/about.html
+++ b/about.html
@@ -78,6 +78,8 @@
             <img src="img/instagram-inactive.png" alt="Instagram" class="default-image">
             <img src="img/instagram.png" alt="Instagram" class="hover-image">
           </a>
+          <p class="p-about"></p>
+          <p class="p-about"></p>
         </div>
         <div class="about-img">
           <img src="img/about-pic.png" alt="Фото автора">
