--- a/cases.html
+++ b/cases.html
@@ -129,7 +129,7 @@
     <div class="container">
       <div class="cases-grid">
         <div class="cases-text">
-          <h2>КЕЙС "ГВОЗДЕТЕРАПЕВТ"</h2>
+          <h2>КЕЙС "НАТУРОПАТ"</h2>
           <p class="p-cases"><span class="highlight-bold">GULNAZ_SADHU</span></p>
           <p class="p-cases">Гвоздетерапевт, массажист, натуропат.</p>
           <p class="p-cases"><span class="highlight-bold">Цель</span></p>
@@ -152,7 +152,7 @@
           <img src="img/cases6.png" alt="Кейс 6">
         </div>
         <div class="cases-text">
-          <h2>КЕЙС "ЭНЕРГОПРАКТИК"</h2>
+          <h2>КЕЙС "ЭНЕРГО- ПРАКТИК"</h2>
           <p class="p-cases"><span class="highlight-bold">REGINA_SURKOVA_</span></p>
           <p class="p-cases">Энергопрактик, личный блог.</p>
           <p class="p-cases"><span class="highlight-bold">Цель</span></p>
