--- a/cases.html
+++ b/cases.html
@@ -152,7 +152,7 @@
           <img src="img/cases6.png" alt="Кейс 6">
         </div>
         <div class="cases-text">
-          <h2>КЕЙС "ЭНЕРГО- ПРАКТИК"</h2>
+          <h2>КЕЙС "ЛИЧНЫЙ БЛОГ"</h2>
           <p class="p-cases"><span class="highlight-bold">REGINA_SURKOVA_</span></p>
           <p class="p-cases">Энергопрактик, личный блог.</p>
           <p class="p-cases"><span class="highlight-bold">Цель</span></p>
