--- a/cases.html
+++ b/cases.html
@@ -15,10 +15,9 @@
   <header class="site-header">
     <div class="container">
       <div class="header-content">
-        <h1 class="author-name">Кристина Данелян</h1>
+        <h1 class="author-name"><a href="index.html">Кристина Данелян</a></h1>
         <nav class="menu-links">
           <ul class="nav-links desktop-menu">
-            <li><a href="index.html">Главная</a></li>
             <li><a href="about.html">Обо мне</a></li>
             <li><a href="cases.html">Кейсы</a></li>
             <li><a href="index.html#services">Услуги</a></li>
@@ -33,7 +32,6 @@
       <div class="mobile-menu-overlay">
         <button class="close-menu">&times;</button> <!-- Close Button -->
         <ul class="mobile-menu">
-          <li><a href="index.html">Главная</a></li>
           <li><a href="about.html">Обо мне</a></li>
           <li><a href="cases.html">Кейсы</a></li>
           <li><a href="index.html#services">Услуги</a></li>
