--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
     </div>
   </section>
 
+  <!-- Arrow up -->
+  <button id="backToTop" aria-label="Наверх">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+  </button>
+
   <!-- Footer Section -->
   <footer class="site-footer">
     <div class="container">
@@ -218,6 +225,22 @@
         checkbox.addEventListener("change", function () {
           submitBtn.disabled = !checkbox.checked;
         });
+      });
+    </script>
+    <script>
+      //Arrow up
+      const backToTopButton = document.getElementById('backToTop');
+    
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+          backToTopButton.classList.add('show');
+        } else {
+          backToTopButton.classList.remove('show');
+        }
+      });
+    
+      backToTopButton.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
       });
     </script>
   </footer>
