--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
   <!-- Footer Section -->
   <footer class="site-footer-short">
     <div class="container">
-      <p>&copy; 2025 Кристина Данелян | <a href="https://www.instagram.com/kris.danelyan/" class="footer-link">Instagram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | <a href="https://t.me/krisdanelyan" class="footer-link">Telegram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | danelyan.k@bk.ru</p>
+      <p>&copy; 2025 Кристина Данелян | <a href="https://www.instagram.com/kris.danelyan/" class="footer-link" target="_blank">Instagram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | <a href="https://t.me/krisdanelyan" class="footer-link" target="_blank">Telegram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | danelyan.k@bk.ru</p>
     </div>
     <script>
       // Toggle mobile menu
