--- a/cases.html
+++ b/cases.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="container">
       <div class="header-content">
-        <h1 class="author-name"><a href="index.html">Кристина Данелян</a></h1>
+        <h1 class="author-name"><a href="index.html"><img src="img/logowhitesite.png" class="logoimg" alt="logo">Кристина Данелян</a></h1>
         <nav class="menu-links">
           <ul class="nav-links desktop-menu">
             <li><a href="about.html">Обо мне</a></li>
@@ -183,7 +183,7 @@
   <!-- Footer Section -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2025 Кристина Данелян</p>
+      <p>&copy; 2025 Кристина Данелян | <a href="https://www.instagram.com/kris.danelyan/" class="footer-link" target="_blank">Instagram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | <a href="https://t.me/krisdanelyan" class="footer-link" target="_blank">Telegram<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M7 17L17 7M17 7H7M17 7V17"/></svg></a> | danelyan.k@bk.ru</p>
     </div>
     <script>
       // Toggle mobile menu
