--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="container">
       <h2>ОСТАВЬТЕ ЗАЯВКУ</h2>
       <form
-      action="https://formspree.io/f/xblozjap"
+      action="https://formspree.io/f/xeoknzrl"
       class="fs-form"
       target="_top"
       method="POST"
