--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Pitch Section -->
   <section id="pitch" class="pitch-section">
     <div class="container">
-      <p><span class="highlight-bold">КРИСТИНА ДАНЕЛЯН</span> – SMM Специалист</p>
+      <p><span class="highlight-bigger"><span class="highlight-bold">КРИСТИНА ДАНЕЛЯН</span> – SMM Специалист</span></p>
       <h2><span class="highlight-color">ПОМОГУ УВЕЛИЧИТЬ ПРИБЫЛЬ</span> С ПОМОЩЬЮ INSTAGRAM*</h2>
       <p>Instagram для малого и среднего бизнеса и индивидуальные консультации.</p>
       <!-- Button contact -->
