--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
           <p class="p-metrics">лет – опыт работы по ведению и продвижению аккаунтов в Instagram</p>
         </div>
         <div class="metrics-grid">
-          <h4>+5330%</h4>
-          <p class="p-metrics">вовлеченных аккаунтов в вирусном ролике у одного из заказчиков</p>
+          <h4>5330%</h4>
+          <p class="p-metrics">рост вовлеченных аккаунтов в вирусном ролике у одного из заказчиков</p>
         </div>
         <div class="metrics-grid">
-          <h4>15+</h4>
-          <p class="p-metrics">Instagram профилей заказчиков создано или улучшено за все время</p>
+          <h4>>15</h4>
+          <p class="p-metrics">проектов с продуманной контент-стратегией и визуалом</p>
         </div>
       </div>
     </div>
